deferred brix sans

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <link href="favicon.ico" rel="icon"/>
 <!-- Site-specific CSS files -->
     
-  <link href="https://www.ucsd.edu/_resources/css/vendor/brix_sans.css" rel="stylesheet" type="text/css"/>
+  <link href="https://www.ucsd.edu/_resources/css/vendor/brix_sans.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'" type="text/css"/>
   <link href="https://www.ucsd.edu/_resources/css/vendor/refrigerator_deluxe.css" rel="stylesheet" type="text/css"/>
   
   <!-- CSS complied from style overrides -->
