deferred more css

--- a/index.html
+++ b/index.html
@@ -14,21 +14,22 @@
 <!-- Site-specific CSS files -->
     
   <link href="./resources/brix_sans.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
-  <link href="https://www.ucsd.edu/_resources/css/vendor/refrigerator_deluxe.css" rel="stylesheet" type="text/css"/>
+  <link href="https://www.ucsd.edu/_resources/css/vendor/refrigerator_deluxe.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
 
   
   <!-- CSS complied from style overrides -->
-  <link href="https://www.ucsd.edu/_resources/css/styles.css" rel="stylesheet"/>
+
+  <link href="https://www.ucsd.edu/_resources/css/styles.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
   
   <link href="resources/css/custom-img.css" rel="stylesheet"/>
   
-  <link href="https://www.ucsd.edu/_resources/css/custom.css" rel="stylesheet"/>
+  <link href="https://www.ucsd.edu/_resources/css/custom.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
 
   <!-- Font Awesome Icons -->
-  <link href="https://www.ucsd.edu/_resources/css/vendor/font-awesome.css" rel="stylesheet"/>
+  <link href="https://www.ucsd.edu/_resources/css/vendor/font-awesome.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
 
   <!-- Animation -->
-  <link href="https://www.ucsd.edu/_resources/css/vendor/animate.css" rel="stylesheet"/>
+  <link href="https://www.ucsd.edu/_resources/css/vendor/animate.css" rel="preload" as="style" onload="this.onload=null;this.rel='stylesheet'"/>
 
   <!-- Slick Slider for custom carousel -->
   <link href="https://www.ucsd.edu/_resources/css/vendor/slick.css" rel="stylesheet" type="text/css"/>
