--- a/index.html
+++ b/index.html
@@ -1038,7 +1038,7 @@
 					<div class="col-md-5">
 						<div class="panel panel-default">
 							<div class="panel-body text-center">
-								<h4>Get an inside look at UC San Diego&#8212;from anywhere in the world.</h4>
+								<b>Get an inside look at UC San Diego&#8212;from anywhere in the world.</b>
 								<p><a class="btn btn-primary" data-module="book-tour-and-map"
 										href="https://admissions.ucsd.edu/visit/virtual-tour.html">Virtual Tour</a></p>
 							</div>
